mirror-logs/pr-420/latest/debug-bundle-unit/alembic-current.txt
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.11.13/x64/bin/alembic", line 7, in <module>
    sys.exit(main())
             ^^^^^^
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/config.py", line 641, in main
    CommandLine(prog=prog).main(argv=argv)
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/config.py", line 631, in main
    self.run_cmd(cfg, options)
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/config.py", line 608, in run_cmd
    fn(
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/command.py", line 625, in current
    script.run_env()
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/script/base.py", line 583, in run_env
    util.load_python_file(self.dir, "env.py")
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/util/pyfiles.py", line 95, in load_python_file
    module = load_module_py(module_id, path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.11.13/x64/lib/python3.11/site-packages/alembic/util/pyfiles.py", line 113, in load_module_py
    spec.loader.exec_module(module)  # type: ignore
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/work/AWA-App/AWA-App/services/api/migrations/env.py", line 13, in <module>
    from packages.awa_common.base import Base  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/AWA-App/AWA-App/packages/awa_common/__init__.py", line 2, in <module>
    from .keepa import list_active_asins
  File "/home/runner/work/AWA-App/AWA-App/packages/awa_common/keepa.py", line 3, in <module>
    from .dsn import build_dsn
  File "/home/runner/work/AWA-App/AWA-App/packages/awa_common/dsn.py", line 37
    netloc = f"{auth}{host}{":" + effective_port if effective_port else ''}"
                             ^
SyntaxError: f-string: expecting '}'
